	{prefix}/etc/vifm/colors/*.  Thanks to astrell and Michael Vetter (a.k.a.
	jubalh).

	Added one more light color scheme to assets (in two variations
	astrell-root and astrell-user).  Thanks to astrell.

	Added regexp patterns to :file[x]type and :fileviewer commands.  Thanks to
	filterfalse.

	Added full path patterns ({{globs}} and //regexp//).  Thanks to astrell.

	Allowed having multiple file viewers with same rules for choosing them at
	run-time as for file associations.  Thanks to filterfalse.

	Changed default value of 'trashdir' from "$VIFM/Trash" to
	"%r/.vifm-Trash,$VIFM/Trash".  Thanks to Joseph LP (a.k.a. ootput).

	Made calculation of directory size visible in :jobs menu.

	Made tests less dependent on environment.  Thanks to Hendrik Jaeger (a.k.a.
	henk).

	Removed unnecessary command existence checks from vifm.vim.  Thanks to
	filterfalse.

	Auto-resize position field on the status bar to fit the text.  Thanks to
	ranousse.

	Switch to utf-8 internal representation of paths on Windows.  This fixes
	issues when file name encoding doesn't match system encoding.  Thanks to
	Stas Panteleev.

	Made leaving wrong (unexpectedly removed) directory more robust.  Thanks
	to willemw12.

	Significantly reduced amount of work performed by Vifm is idle.  Thanks to
	hofheinz.

	Made message dialogs interact better with everything else on the screen.
	E.g. redraw properly after terminal resize.

	United last pattern of :substitute command with search history.  Thanks to
	filterfalse.

	Made configure script lookup curs_set in libtinfo.

	Redirect both standard output and error streams from viewers (already was
	the case for Windows).

	Don't lose previously saved filter on repeated resetting (pressing zO twice
	in a row caused previous filter values to be lost).

	Extended :sync command to support selective synchronization (user can
	choose among location, cursor position, local options and filters).
	Thanks to filterfalse.
